# IAO

./: .gitignore  README-ptbr.md  README.md  harness.json  package.sh  run-checks-py.sh  run-checks.sh  run-development-py.sh  run-development.sh
docs/: 202607220120-todo-app-notificacao-email-status-brief.md  adr-0001-vertical-slice.md  adr-0002-notificacao-email.md  c4-diagrama-componentes-notificacao-email.md  c4-diagrama-componentes.md
scripts/: claude_usage.py  codex_usage.py  copilot_usage.py  harness_cost_correlate.py
src/python/: pyproject.toml
src/python/flows_development/: __init__.py  __main__.py  prompts.py  tasks.py
src/python/harness_engine/: __init__.py  artifact_store.py  artifact_template.py  batch_evaluator.py  docs_reader.py  envelope.py  envelope_validation.py  errors.py  evaluators.py  feature_store.py  git_command.py  golden_case_store.py  harness_config.py  harness_host.py  harness_state.py  inbox.py  path_resolver.py  prompt_formatter.py  run_config_store.py  score_store.py  state_store.py  task_registry.py  trace.py
src/python/tests/: conftest.py  test_artifact_store.py  test_batch_evaluator.py  test_cost_budget.py  test_development_flow.py  test_docs_reader.py  test_envelope.py  test_envelope_validation.py  test_evaluators.py  test_feature_store.py  test_git_command.py  test_harness_config.py  test_harness_host.py  test_inbox.py  test_max_steps_override.py  test_path_resolver.py  test_prompt_formatter.py  test_run_config_store.py  test_state_store.py  test_task_registry.py  test_timeout_guard.py  test_trace.py
(+138 files in other folders)
